--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-fastapi==0.95.2
-uvicorn==0.22.0
-pymongo==4.3.3
-python-dotenv==1.0.0
-pydantic==1.10.7
+fastapi==0.109.2
+uvicorn==0.27.1
+motor==3.3.2
+python-dotenv==1.0.1
+pydantic==2.6.1
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
+python-multipart==0.0.9
+pydantic-settings==2.1.0
