--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
-      - key: MONGODB_URI
+      - key: MONGODB_URL
         sync: false
       - key: SECRET_KEY
         sync: false
