Update MongoDB connection string in .env and config.py to use Atlas cluster

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ SMTP_PASSWORD=16_digit_smtp_password
 FRONTEND_URL=http://localhost:3000
 
 # Database
-MONGODB_URL=mongodb://localhost:27017
+MONGODB_URL=mongodb+srv://node_curd:node_curd@cluster0.ahupn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 DATABASE_NAME=student_db
 
 # CORS
