Add test deployment server URL to FastAPI configuration in main.py

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ MONGODB_URL=mongodb+srv://node_curd:node_curd@cluster0.ahupn.mongodb.net/?retryW
 DATABASE_NAME=student_db
 
 # CORS
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000,http://127.0.0.1:8000
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000,http://127.0.0.1:8000,https://student-management-api-dwse.onrender.com
 
 # Rate Limiting
 REQUESTS_PER_MINUTE=60
